# GT-v1-engine

./: .env.example  .gitignore  README.md  pyproject.toml  r.json  requirements.txt
scripts/: generate_adx_td_ts.py  generate_all_indicators_td_ts.py  generate_atr_td_ts.py  generate_bollinger_td_ts.py  generate_ichimoku_td_ts.py  generate_parabolic_sar_td_ts.py  generate_rsi_td_ts.py  generate_stochastic_td_ts.py  gt_rule_dynamic_csv_executor.py  gt_rule_td_only_dynamic_csv_executor.py  gt_rule_trade_csv_summary.py  merge_two_indicator_td_ts_csv.py  run_ema_stack_td_ts_from_cleaned_csv.py  run_indicator_backtest_rule_01.py  run_macd_td_ts_from_cleaned_csv.py  standalone_indicator_common.py
tests/: indicator_test_helpers.py  test_candle_outcome.py  test_cleaned_csv_details.py  test_cli_help.py  test_cli_indicator_backtester.py  test_cli_rule171.py  test_cli_rule171_baseline_comparison.py  test_cli_run_indicators.py  test_cli_smoke_pipeline.py  test_indicator_adx.py  test_indicator_atr.py  test_indicator_backtest_rule_01_script.py  test_indicator_backtester.py  test_indicator_bollinger.py  test_indicator_calculation_contract.py  test_indicator_ema_stack.py  test_indicator_executor.py  test_indicator_macd.py  test_indicator_registry.py  test_indicator_rsi.py  test_indicator_selection.py  test_indicator_strength.py  test_market_data_loader.py  test_pip_utils.py  test_raw_csv_cleaner.py  test_rule171_baseline_comparison.py  test_rule171_config.py  test_rule171_executor.py  test_run_rule_gt_td_3_9_tlpsl_18_22.py  test_run_rule_gt_td_3_9_tlpsl_20_40.py  test_smoke_pipeline.py  (+5 more)
(+57 files in other folders)
