[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gt-v1"
version = "0.1.0"
description = "Config-first Rule171 research foundation"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "pyarrow",
  "pydantic",
  "typer",
  "rich",
  "pyyaml",
  "pytest",
]

[project.scripts]
gt-v1 = "gt_v1.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
